--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,20 @@
-<div class="photo-bg" id="foto_inicio">
-  <img src="images/Foto-inicio.png">
+<div id="container_home">
+  <img src="/images/Foto-Inicio.png">
+  <h2>Conectando você a oportunidades acadêmicas.</h2>
 </div>
 
-<button type="button" class="btn_home", onclick= "location.href='/cursos';">Cursos</button>
-<p>Saiba mais sobre os cursos de graduação da UFC</p>
+<h2>Consulte</h2>
+<div class="linha"></div>
+<img class="img_home" src="/images/foto-consulte.png">
+<p>Saiba mais sobre os cursos de graduação da UFC e os tipos de trabalho de conclusão de curso.</p>
+<button type="button" class="btn_home", onclick= "location.href='/cursos';">Ver cursos</button>
 
-<button type="button" class="btn_home" id="desabilitado">Docentes</button>
-<p>Pesquise, acompanhe e solicite orientação para os professores</p>
-<div id="pageNavOverlay"></div>
+<h2>Explore</h2>
+<div class="linha"></div>
+<img class="img_home" src="/images/foto-explore.png">
+
+<p>Pesquise, acompanhe e conecte-se com os docentes que mais estão alinhados à sua área de interesse.</p>
+
+<button type="button" class="btn_home" onclick="location.href='/aluno/login';">Conecte-se já</button>
+
+<div id="pageNavOverlay"></div> 
