--- a/views/index_smd.ejs
+++ b/views/index_smd.ejs
@@ -1,79 +1,115 @@
 <div class="tabs-wrapper" id="tabsWrapper">
-    <ul role="tablist" class="tabs" arial-label="tabs-description">
-      <li>
-          <button role="tab" aria-selected="true" aria-controls="tab-1">Sobre</button>
-          <div tabindex="0" role="tabpanel" id="tab-1" aria-labelledby="tab-1" tabindex="0">
-            
-            <img class="photo-bg" src="images/Foto-SMD.png">
-            <div>
-              <img class="icones" src="images/icons/curso_smd.png">
-              <h3 style="font-size: 18px">Onde Sistemas e Mídias Digitais caminham lado a lado</h3>
-            </div>
-            <p style="text-align: left; color: #1C1C1C;">
-            O curso forma profissionais de perfis como produção de midias digitais e desenvolvimento de sistemas multimídias.</p>
-            <p> 
-              Atualmente ele forma 4 trilhas de especialização:<span style="font-weight: bold;"> Audiovisual, Design Digital, Sistemas e Jogos.</span>
-            </p> 
-            <h3>Como Funciona o TCC?</h3>
-            <div class="linha"></div>
-              <p>
-                O SMD tem 3 tipos de trabalho de conclusão de curso:
-              </p>
-              <ul>
-                <li style="border-style: solid;border-width: 1px; border-radius: 15px; border-color: #1c1c1c; padding-bottom: 5%; margin-top: 5%;">
-                  <img src="images/icons/monografia.svg" style="float: left;clear: both;width: 50px; height: auto; padding-right: 3%;">
-                  Monografia
-                </li>
-    
-                <li style="border-style: solid;border-width: 1px; border-radius: 15px; border-color: #1c1c1c;padding-bottom: 5%;margin-top: 5%;">
-                  <img src="images/icons/monografia.svg" style="float: left;clear: both;width: 50px; height: auto; padding-right: 3%;">
-                  Artigo
-                </li>
-    
-                <li style="border-style: solid;border-width: 1px; border-radius: 15px; border-color: #1c1c1c;padding-bottom: 5%;margin-top: 5%;">
-                  <img src="images/icons/monografia.svg" style="float: left;clear: both;width: 50px; height: auto; padding-right: 3%;">
-                  Relatório Técnico
-                </li>
-              </ul>
-          </div>
-      </li>
-      <li>
-        <button role="tab" aria-selected="false" aria-controls="tab-2">Audiovisual</button>
-        <div tabindex="0" role="tabpanel" id="tab-2" aria-labelledby="tab-2" tabindex="0" hidden="">
+  <div id="fundo-wrapper"></div>
+  <ul role="tablist" class="tabs" arial-label="tabs-description" style="display: flex; justify-content: space-between;">
+    <li>
+      <button role="tab" aria-selected="true" aria-controls="tab-1">Sobre</button>
+    </li>
+    <li>
+      <button role="tab" aria-selected="false" aria-controls="tab-2">Audiovisual</button>
+    </li>
+    <li>
+      <button role="tab" aria-selected="false" aria-controls="tab-3">Design</button>
+    </li>
+    <li>
+      <button role="tab" aria-selected="false" aria-controls="tab-4">Sistemas</button>
+    </li>
+    <li>
+      <button role="tab" aria-selected="false" aria-controls="tab-5">Jogos</button>
+    </li>
+  </ul>
 
-            <% docentes.filter(docente => docente.trilhas.includes('Audiovisual')).forEach(function(docente){ %>
-              <% include ./partials/card_docente %>
-            <% }); %>
+  <div>
+    <div tabindex="0" role="tabpanel" id="tab-1" aria-labelledby="tab-1" tabindex="0">
+      <img class="photo-bg" src="/images/Foto-SMD.png">
+      <div>
+        <img class="icones" src="/images/icons/cursos_icon.png">
+        <h3 style="font-size: 18px">Onde Sistemas e Mídias Digitais caminham lado a lado</h3>
+      </div>
+      <p style="text-align: left; color: #1C1C1C;">
+        O curso forma profissionais de perfis como produção de midias digitais e desenvolvimento de sistemas
+        multimídias.</p>
+      <p>
+        Atualmente ele forma 4 trilhas de especialização:<span style="font-weight: bold;"> Audiovisual, Design Digital,
+          Sistemas e Jogos.</span>
+      </p>
 
-        </div>
-      </li>
-  
-      <li>
-        <button role="tab" aria-selected="false" aria-controls="tab-3">Design</button>
-        <div tabindex="0" role="tabpanel" id="tab-3" aria-labelledby="tab-3" tabindex="0" hidden="">        
-            <% docentes.filter(docente => docente.trilhas.includes('Design')).forEach(function(docente){ %>
-              <% include ./partials/card_docente %>
-            <% }); %>
-        </div>
-      </li>
-  
-      <li>
-        <button role="tab" aria-selected="false" aria-controls="tab-4">Sistemas</button>
-        <div tabindex="0" role="tabpanel" id="tab-4" aria-labelledby="tab-4" tabindex="0" hidden="">
-            <% docentes.filter(docente => docente.trilhas.includes('Sistemas')).forEach(function(docente){ %>
-              <% include ./partials/card_docente %>
-            <% }); %>        
-        </div>
-      </li>
 
-      <li>
-          <button role="tab" aria-selected="false" aria-controls="tab-5">Jogos</button>
-          <div tabindex="0" role="tabpanel" id="tab-5" aria-labelledby="tab-5" tabindex="0" hidden="">
-              <% docentes.filter(docente => docente.trilhas.includes('Jogos')).forEach(function(docente){ %>
-                <% include ./partials/card_docente %>
-              <% }); %>        
-          </div>
-        </li>
-    </ul>
+      <h3>Como Funciona o TCC?</h3>
+      <div class="linha"></div>
+      <p>
+        O SMD tem 3 tipos de trabalho de conclusão de curso:
+      </p>
+
+      <div class="lista_tcc">
+        <div class="subtitle">
+          <img class="tcc_icons" src="/images/icons/monografia.png">
+          Monografia
+          <img class="arrow_down" src="/images/icons/arrow-down.png">
+        </div>
+        <div class="content">
+          <p>
+            O padrão de monografia a ser seguido é o da UFC. A quantidade mínima de páginas a partir da introdução até a
+            conclusão é de 30 páginas (exclui-se dessa contagem todos os elementos pré-textuais, referências
+            bibliográficas, apêndices e anexos).
+          </p>
+        </div>
+      </div>
+
+      <div class="lista_tcc">
+        <div class="subtitle">
+          <img class="tcc_icons" src="/images/icons/artigo.png">
+          Artigo
+          <img class="arrow_down" src="/images/icons/arrow-down.png">
+        </div>
+        <div class="content">
+          <p>
+            O aluno e orientador irão selecionar um evento ou periódico para se basear na elaboração do artigo. As
+            regras do evento ou periódico deverão ser seguidas na elaboração do artigo do aluno (formato, estrutura,
+            quantidade de páginas, etc.)
+            <br /><br />
+            Não serão aceitos artigos do tipo resumido ou resumos expandidos.
+          </p>
+        </div>
+      </div>
+
+      <div id="lista_tcc_lastchild" class="lista_tcc">
+        <div class="subtitle">
+          <img class="tcc_icons" src="/images/icons/relatorio.png">
+          Relatório Técnico
+          <img class="arrow_down" src="/images/icons/arrow-down.png">
+        </div>
+        <div class="content">
+          <p>
+            O aluno poderá desenvolver um produto multimídia (animação, aplicativo, site, etc) e apresentar em conjunto
+            com um relatório técnico.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div tabindex="0" role="tabpanel" id="tab-2" aria-labelledby="tab-2" tabindex="0" hidden="">
+        <% docentes.filter(docente => docente.trilhas.includes('Audiovisual')).forEach(function(docente){ %>
+          <% include ./partials/card_docente %>
+        <% }); %>
+    </div>
+
+    <div tabindex="0" role="tabpanel" id="tab-3" aria-labelledby="tab-3" tabindex="0" hidden="">
+      <% docentes.filter(docente => docente.trilhas.includes('Design')).forEach(function(docente){ %>
+        <% include ./partials/card_docente %>
+      <% }); %>
+    </div>
+
+    <div tabindex="0" role="tabpanel" id="tab-4" aria-labelledby="tab-4" tabindex="0" hidden="">
+      <% docentes.filter(docente => docente.trilhas.includes('Sistemas')).forEach(function(docente){ %>
+        <% include ./partials/card_docente %>
+      <% }); %>
+    </div>
+
+    <div tabindex="0" role="tabpanel" id="tab-5" aria-labelledby="tab-5" tabindex="0" hidden="">
+      <% docentes.filter(docente => docente.trilhas.includes('Jogos')).forEach(function(docente){ %>
+        <% include ./partials/card_docente %>
+      <% }); %>
+    </div>
+
   </div>
-    <div id="pageNavOverlay"></div> 
+</div>
+<div id="pageNavOverlay"></div>
