--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -16,7 +16,7 @@
   <% if (typeof pag != 'undefined')  { %>
   <div class="box-nav">
     <a href="javascript:void(0)" onClick="history.go(-1); return false;">
-      <img src="./images/arrow-thin-left.png" class="icon-nav">
+      <img src="/images/arrow-thin-left.png" class="icon-nav">
     </a>
       <h3><%= pag %></h3> 
     </div>
