--- a/views/partials/menu_logado.ejs
+++ b/views/partials/menu_logado.ejs
@@ -7,7 +7,7 @@
             <img src="/images/profile-photo.jpg" id="profile-photo">
             <div>
               <h4>Olá, <%= user.name %></h4>
-              <a href="/aluno/perfil">
+              <a href="/aluno/perfil/perfil">
                 <img src="/images/icons/ver perfil.png" id="ver_perfil">
               </a>
             </div>
@@ -27,13 +27,13 @@
               </a>
             </li>
             <li>
-              <a href="/aluno/perfil">
+              <a href="/aluno/perfil/favoritos">
                 <img src="/images/icons/favoritos.png" class="icones">
                 Favoritos
               </a>
             </li>
             <li>
-              <a href="/aluno/perfil">
+              <a href="/aluno/perfil/perfil">
                 <img src="/images/icons/solicitacao.png" class="icones">
                 Solicitações
               </a>
