--- a/public/css/buddy.css
+++ b/public/css/buddy.css
@@ -54,6 +54,8 @@ img{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 button{
@@ -464,7 +466,70 @@ img {
   left: 0;
   right: 0;
 }
+#submit_container{
+   display: flex; 
+   justify-content: space-between; 
+   margin-left: -5%; 
+   margin-right: 5%; 
+   margin-top: 5%; 
+   margin-bottom: 5%;
+}
+#submit_container button{
+  border-radius: 10px; 
+  width: 40%; 
+  height: 50px; 
+  font-weight: 700; 
+  font-size: 22px; 
+  text-align: center;
+}
+#submit_container #btn_enviar{
+  color: #000000; 
+  background-color: #6DC5A8;
+}
+#submit_container #btn_cancelar{
+  color: #7B7B7B; 
+  background-color: #ffffff; 
+  border: solid; 
+  border-width: 2px; 
+  border-color: orange;
+}
+#mensagem-orientacao{
+  background-color: #E6E6E6;
+  height: 150px;
+  resize: none;
+  border-radius: 15px; 
+  width: 90%;
+}
+#mensagem-orientacao::placeholder{
+  color: #474747;
+  font-size: 18px;
+}
+#msg_solicitar{
+  width: 100%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 5%; 
 
+  text-align: left;
+  color: #707070; 
+  font-weight: 600;
+}
+#msg_solicitar h4{
+   margin-left: 0; 
+   margin-top: 5%; 
+   font-weight: 600;
+}
+#titulo_solicita{
+  text-align: center; 
+  color: #6DC5A8; 
+  background-color: #FBFBFB; 
+  padding-bottom: 5%; 
+  margin-left: 0; 
+  margin-right: 0; 
+  padding-top: 2%; 
+  padding-bottom: 2%; 
+  font-weight: 500;
+}
 #lista_tcc_lastchild{
   margin-bottom: 10%;
 }
@@ -472,6 +537,64 @@ img {
  width: 100%; 
  height: 20%;
 }
+
+/* ---------------------------------------------- */
+.radio-laranja {
+  margin-bottom: 5px;
+}
+.radio-laranja div{
+  display: flex;
+}
+.radio-laranja label {
+  margin-right: 15px;
+  line-height: 32px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.radio-laranja input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+
+  border: 2px solid #999;
+  transition: 0.2s all linear;
+  margin-right: 5px;
+
+  position: relative;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.radio-laranja input:checked {
+  border: 6px solid orange;
+}
+
+.radio-laranja button, legend {
+  color: white;
+  background-color: black;
+  padding: 5px 10px;
+  border-radius: 0;
+  border: 0;
+  font-size: 14px;
+}
+
+.radio-laranja button:hover,.radio-laranja button:focus {
+  color: #999;
+}
+
+.radio-laranja button:active {
+  background-color: white;
+  color: black;
+  outline: 1px solid black;
+}
+
+/*  -------------------------------------------*/
+
 #container_home h2{
   position: absolute; 
   margin-left: 0;
@@ -606,57 +729,6 @@ img {
   width: 7vw;
   height: auto;
 }
-/* --------------------------------------------- */
-/* -------------------- MINHAS CLASSES ------------------------- */
-.dot {
-  height: 10px;
-  width: 10px;
-
-  border-style: solid;
-  border-width: 2px;
-  border-radius: 50%;
-  float: left;
-
-  margin-top: 1.5vh;
-  margin-bottom: auto;
-  margin-right: 2%;
-}
-#solicit-perfil .subtitle{
-   display: flex; 
-   justify-content: space-between; 
-   text-align: center;
-}
-.btn_solicita{
-  width: 40px; 
-  height: auto; 
-  margin: 2%;
-}
-.content p{
-  margin-top: 10%;
-}
-.lista_tcc{
-  border-radius: 10px; 
-  clear: both;
-
-  padding: 5%;
-
-  margin-top: 5%;
-  margin-left: 5%;
-  margin-right: 5%;
-
-  box-shadow: 0px 2px 2px #DCDCDC, 
-              -4px 2px 4px #DCDCDC, 
-              4px 2px 4px #DCDCDC;
-}
-
-.arrow_down{
-  float: right;
-  width: 20px;
-  height: auto;
-  margin-right: 5%;
-  margin-top: auto;
-  margin-bottom: auto;
-}
 
 /* DISPONIBILIDADE BOLINHAS E IDS PROFESSORES  */
 #dot_disponivel{
@@ -674,6 +746,11 @@ border-color: #FFE81C;
 #disponivel_projetos, #disponivel_geral, #indisponivel{
   font-size: 12px;
 }
+#solicit-perfil .subtitle{
+   display: flex; 
+   justify-content: space-between; 
+   text-align: center;
+}
 #ver_perfil{
   width: 100%; 
   height: auto; 
@@ -685,29 +762,6 @@ border-color: #FFE81C;
   padding-bottom: 5%; 
   color: #6DC5A8; 
   background-color: #FBFBFB;
-}
-/*-----------------------------------------------*/
-.professores_favoritados{
-  margin-left: 5%;
-  float: left;
-  width: 90%;
-  
-  padding-left: 2%;
-  padding-right: 2%;
-  padding-bottom: 5vh;
-  
-  box-shadow: 0px 2px 2px #DCDCDC, 
-              -4px 2px 4px #DCDCDC, 
-              4px 2px 4px #DCDCDC;
-  border-radius: 10px;
-}
-.professores_favoritados h5{
-  text-align: center;
-}
-.professores_favoritados img{
-  display: block;
-  margin-left: 10%;
-  width: 80%;
 }
 #carousel{
   width: 100%;
@@ -800,6 +854,93 @@ background-color: transparent;
   color: #707070; 
   font-size: 15px;
 }
+#card-professor{
+   margin-bottom: 5%; 
+   margin-top: 5%;
+   border: none;
+   box-shadow: none;
+   width: 94%;
+   margin-left: 3%;
+   margin-right: 3%;
+}
+#card-professor #disponivel_projetos, #card-professor #disponivel_geral, #card-professor #indisponivel{
+  font-size: 12px;
+}
+/* --------------------------------------------- */
+/* -------------------- MINHAS CLASSES ------------------------- */
+.dot {
+  height: 10px;
+  width: 10px;
+
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 50%;
+  float: left;
+
+  margin-top: 1.5vh;
+  margin-bottom: auto;
+  margin-right: 2%;
+}
+.container-image{
+  height: 105px; width: 100px; margin: auto;
+}
+.container-image img {
+  border-radius: 10px;
+  object-fit: contain;
+}
+.btn_solicita{
+  width: 40px; 
+  height: auto; 
+  margin: 2%;
+}
+.content p{
+  margin-top: 10%;
+}
+.lista_tcc{
+  border-radius: 10px; 
+  clear: both;
+
+  padding: 5%;
+
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+
+  box-shadow: 0px 2px 2px #DCDCDC, 
+              -4px 2px 4px #DCDCDC, 
+              4px 2px 4px #DCDCDC;
+}
+.arrow_down{
+  float: right;
+  width: 20px;
+  height: auto;
+  margin-right: 5%;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.professores_favoritados{
+  margin-left: 5%;
+  float: left;
+  width: 90%;
+  
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-bottom: 5vh;
+  
+  box-shadow: 0px 2px 2px #DCDCDC, 
+              -4px 2px 4px #DCDCDC, 
+              4px 2px 4px #DCDCDC;
+  border-radius: 10px;
+}
+.professores_favoritados h5{
+  text-align: center;
+}
+.professores_favoritados img{
+  display: block;
+  margin-left: 10%;
+  width: 80%;
+}
+
 .linha_cinza{
   width: 100vw;
   height: 10px;
@@ -977,18 +1118,6 @@ background-color: transparent;
   margin-bottom: 2%;
 }
 
-#card-professor{
-   margin-bottom: 5%; 
-   margin-top: 5%;
-   border: none;
-   box-shadow: none;
-   width: 94%;
-   margin-left: 3%;
-   margin-right: 3%;
-}
-#card-professor #disponivel_projetos, #card-professor #disponivel_geral, #card-professor #indisponivel{
-  font-size: 12px;
-}
 .image-responsive{
   float: left;
   
