conserta escolha de menu

--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,4 +1,4 @@
-<% if (user === undefined) {%>
+<% if (typeof user === 'undefined') {%>
   <% include ./menu_visitante %>
 <% } else {%>
   <% include ./menu_logado %>
