Adiciona telas relacionadas as mensagens

--- a/views/partials/solicitacao.ejs
+++ b/views/partials/solicitacao.ejs
@@ -17,10 +17,10 @@
     </div>
     <div class="content">
         <p>
-            Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua.
+            <%= solicitacao.mensagem %>
+        </p>
+        <p>
+            <%= solicitacao.resposta %>
         </p>
     </div>
 </div>
